// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EmailInput component The Rendered HTML should have a label 1`] = `
<div
  class="rfe-form__row"
>
  <label
    for="id-1-1"
  >
    My EmailInput Label
  </label>
  <input
    id="id-1-1"
    name="TextBox"
    type="email"
    value=""
  />
</div>
`;

exports[`EmailInput component handling input should set a value when passed in but not be valid 1`] = `
<div
  class="rfe-form__row"
>
  <label
    for="id-2-1"
  >
    My Example Email
  </label>
  <input
    id="id-2-1"
    name="TextBox"
    type="email"
    value="name@example.com"
  />
</div>
`;
